# Recyclic

./: .dockerignore  .env copy  .env.production.template  .env.staging.template  .gitignore  2025-09-10-command-messagebmadagentssm-is-runningcomma.txt  2025-09-14-command-messagebmadagentssm-is-runningcomma.txt  AGENTS.md  README.md  _tmp_infoma.html  _tmp_infoma_app.js  docker-compose.backup.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.vps.yml  docker-compose.yml  docker-compose.yml.backup  env.example  env.production.example  env.staging.example  how d108bef1 --name-only  grep weightMask  l git branch -a  l git checkout main  l git fetch origin  pytest.ini  test.db  test_cli.py
api/: Dockerfile  Dockerfile.migrations  Dockerfile.tests  TESTS_README.md  TESTS_STABILIZATION_GUIDE.md  alembic.ini  create_admin.sh  create_test_db.py  create_test_tables.py  openapi.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-migrations.txt  requirements.txt  run_tests.sh  start-api.bat  testing-guide.md
api/migrations/: env.py
api/src/: main.py
api/tests/: README.md  conftest.py  test_active_operators_endpoint.py  test_activity_ping.py  test_activity_tracker.py  test_admin_e2e.py  test_admin_force_password.py  test_admin_pending_endpoints.py  test_admin_schemas.py  test_auth_inactive_user_middleware.py  test_auth_logging.py  test_auth_login_endpoint.py  test_auth_login_username_password.py  test_auth_login_username_password_old.py  test_auth_password_reset.py  test_bot_auth_simple.py  test_cash_sessions.py  (+46 more)
(+821 files in other folders)
